# ChangeLog for sys-cluster/maui
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-cluster/maui/ChangeLog,v 1.24 2011/09/06 08:23:37 jlec Exp $

  06 Sep 2011; Justin Lecher <jlec@gentoo.org> maui-3.2.6_p16.ebuild,
  maui-3.2.6_p21.ebuild, maui-3.2.6_p21-r1.ebuild, maui-3.3.ebuild,
  maui-3.3.1-r2.ebuild, metadata.xml:
  Fixed HOMEPAGE

  04 Jul 2011; Alexey Shvetsov <alexxy@gentoo.org> maui-3.3.1-r2.ebuild:
  Add maui key support

*maui-3.3.1-r2 (03 Jul 2011)

  03 Jul 2011; Alexey Shvetsov <alexxy@gentoo.org> -maui-3.3.1-r1.ebuild,
  +maui-3.3.1-r2.ebuild, files/maui.initd:
  Add slurm || pbs support to maui

  30 Jun 2011; Kacper Kowalik <xarthisius@gentoo.org> maui-3.3.1-r1.ebuild:
  maui->PN, fix order of vars

  29 Jun 2011; Alexey Shvetsov <alexxy@gentoo.org> files/maui.initd:
  Fix typo in init.d

  29 Jun 2011; Alexey Shvetsov <alexxy@gentoo.org> maui-3.3.1-r1.ebuild:
  Reloacte spool to var not to usr

*maui-3.3.1-r1 (29 Jun 2011)

  29 Jun 2011; Alexey Shvetsov <alexxy@gentoo.org> -maui-3.3.1.ebuild,
  +maui-3.3.1-r1.ebuild, +files/maui.initd:
  Add init.d

*maui-3.3.1 (05 Mar 2011)

  05 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> +maui-3.3.1.ebuild:
  Version bump wrt #357493

*maui-3.3 (14 Jul 2010)

  14 Jul 2010; Justin Lecher <jlec@gentoo.org> +maui-3.3.ebuild:
  Version Bump and prefix support

*maui-3.2.6_p21-r1 (24 Mar 2010)

  24 Mar 2010; Justin Bronder <jsbronder@gentoo.org>
  +maui-3.2.6_p21-r1.ebuild, +files/maui-3.2.6_p21-pbs-nodefile.patch:
  Fix incorrect PBS_NODEFILE with newer glibc fix. #309755

  02 Mar 2010; Justin Bronder <jsbronder@gentoo.org> maui-3.2.6_p16.ebuild,
  maui-3.2.6_p21.ebuild:
  Update deps

  15 Jan 2010; Thilo Bangert <bangert@gentoo.org> Manifest:
  rebuild manifest (#164373)

  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> maui-3.2.6_p16.ebuild,
  maui-3.2.6_p21.ebuild:
  Remove virtual/libc

  21 Jan 2009; weaver <weaver@gentoo.org> ChangeLog: