@@ -1,6 +1,9 @@
 # ChangeLog for sys-cluster/maui
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/maui/ChangeLog,v 1.24 2011/09/06 08:23:37 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/maui/ChangeLog,v 1.25 2011/10/31 10:30:09 jlec Exp $
+
+  31 Oct 2011; Justin Lecher <jlec@gentoo.org> maui-3.3.1-r2.ebuild:
+  Fixed quoting
 
   06 Sep 2011; Justin Lecher <jlec@gentoo.org> maui-3.2.6_p16.ebuild,
   maui-3.2.6_p21.ebuild, maui-3.2.6_p21-r1.ebuild, maui-3.3.ebuild,
